Change height on onbording images Fix badge overlap on mobile

--- a/src/components/TableComponents/TableCells.module.less
+++ b/src/components/TableComponents/TableCells.module.less
@@ -120,6 +120,10 @@
   top: -8px;
   white-space: nowrap;
   z-index: 1;
+
+  @media (max-width: 640px) {
+    top: -4px;
+  }
 }
 
 .rowCell {
