--- a/src/components/modals/OnboardingModal/OnboardingModal.module.less
+++ b/src/components/modals/OnboardingModal/OnboardingModal.module.less
@@ -107,12 +107,12 @@
 
 .slideImg {
   width: 100%;
-  height: 300px;
+  height: 176px;
   object-fit: contain;
   background: var(--bg-secondary);
 
   @media screen and (max-width: 640px) {
-    height: 184px;
+    height: 144px;
   }
 }
 
